--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -7,13 +7,16 @@
     </head>
 
     <body>
-        <div class="container">
-            test
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">test desktop</div>
+            <div class="col-md-6"><img src="images/icon-home2.jpg"></div>
         </div>
-
-        <!--script-->
-        <script src="/bower_components/jquery/dist/jquery.js"></script>
-        <script src="scripts/main.js"></script>
-        <!--end_script-->
+    </div>
+    <!--script-->
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/tether/dist/js/tether.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!--end_script-->
     </body>
 </html>
