--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -9,7 +9,7 @@
     <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">test desktop</div>
+            <div class="col-md-6">test desktop TEST</div>
             <div class="col-md-6"><img src="images/icon-home2.jpg"></div>
         </div>
     </div>
