fix browserSync in Gulp

--- a/app/desktop/index.html
+++ b/app/desktop/index.html
@@ -11,6 +11,9 @@
         <div class="row">
             <div class="col-md-6">test desktop</div>
             <div class="col-md-6"><img src="images/icon-home2.jpg"></div>
+            test sync
+            test
+            sync
         </div>
     </div>
     <!--script-->
