--- a/app/desktop/news.html
+++ b/app/desktop/news.html
@@ -39,6 +39,12 @@
             </ul>
         </div>
     </nav>
+
+    <ol class="breadcrumb balltoro-breadcrumb">
+        <li><a href="#">หน้าหลัก</a></li>
+        <li class="active">ข่าว</li>
+    </ol>
+    
     <!--script-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/tether/dist/js/tether.min.js"></script>
