--- a/app/desktop/news.html
+++ b/app/desktop/news.html
@@ -40,11 +40,14 @@
         </div>
     </nav>
 
-    <ol class="breadcrumb balltoro-breadcrumb">
-        <li><a href="#">หน้าหลัก</a></li>
-        <li class="active">ข่าว</li>
-    </ol>
-    
+<div class="breadcrumb-bar">
+    <div class="container">
+        <ol class="breadcrumb breadcrumb-bar__main">
+            <li><a href="#">หน้าแรก</a></li>
+            <li class="active">ข่าว</li>
+        </ol>
+    </div>
+</div>
     <!--script-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/tether/dist/js/tether.min.js"></script>
