--- a/app/desktop/news.html
+++ b/app/desktop/news.html
@@ -11,43 +11,78 @@
         <div class="container">
             <a class="navbar-brand" href="#"><img src="images\main-logo.png" alt="Balltoro"></a>
             <ul class="nav navbar-nav pull-xs-right">
-                <li class="nav-item navbar-menu__list">
-                    <a class="nav-link navbar-menu__list--link" href="#">ผลบอลวันนี้</a>
+                <li class="nav-item menu__list">
+                    <a class="nav-link menu__list--link" href="#">ผลบอลวันนี้</a>
                 </li>
-                <li class="nav-item navbar-menu__list">
-                    <a class="nav-link navbar-menu__list--link" href="#">ตารางการแข่งขัน</a>
+                <li class="nav-item menu__list">
+                    <a class="nav-link menu__list--link" href="#">ตารางการแข่งขัน</a>
                 </li>
-                <li class="nav-item navbar-menu__list dropdown">
-                    <a class="nav-link navbar-menu__list--link dropdown-toggle" id="menu__news--dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">ข่าวฟุตบอล</a>
+                <li class="nav-item menu__list dropdown">
+                    <a class="nav-link menu__list--link dropdown-toggle" id="menu__news--dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">ข่าวฟุตบอล</a>
                     <ul class="dropdown-menu menu__submenu" aria-labelledby="menu__news--dropdown">
                         <li class="dropdown-item"><a href=""><i class="fa fa-angle-right" aria-hidden="true"></i> English Premier League</a></li>
                         <li class="dropdown-item"><a href=""><i class="fa fa-angle-right" aria-hidden="true"></i> Thai Premier League</a></li>
                         <li class="dropdown-item"><a href=""><i class="fa fa-angle-right" aria-hidden="true"></i> ข่าวทั้งหมด</a></li>
                     </ul>
                 </li>
-                <li class="nav-item navbar-menu__list dropdown">
-                    <a class="nav-link navbar-menu__list--link dropdown-toggle" id="menu__scoop--dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">สกู๊ปฟุตบอล</a>
+                <li class="nav-item menu__list dropdown">
+                    <a class="nav-link menu__list--link dropdown-toggle" id="menu__scoop--dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">สกู๊ปฟุตบอล</a>
                     <ul class="dropdown-menu menu__submenu" aria-labelledby="menu__scoop--dropdown">
                         <li class="dropdown-item"><a href=""><i class="fa fa-angle-right" aria-hidden="true"></i> English Premier League</a></li>
                         <li class="dropdown-item"><a href=""><i class="fa fa-angle-right" aria-hidden="true"></i> Thai Premier League</a></li>
                         <li class="dropdown-item"><a href=""><i class="fa fa-angle-right" aria-hidden="true"></i> สกู๊ปทั้งหมด</a></li>
                     </ul>
                 </li>
-                <li class="nav-item navbar-menu__list">
-                    <a class="nav-link navbar-menu__list--link login-btn" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> เข้าสู่ระบบ</a>
+                <li class="nav-item menu__list">
+                    <a class="nav-link menu__list--link login-btn" href="#"><i class="fa fa-sign-in" aria-hidden="true"></i> เข้าสู่ระบบ</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-<div class="breadcrumb-bar">
-    <div class="container">
-        <ol class="breadcrumb breadcrumb-bar__main">
-            <li><a href="#">หน้าแรก</a></li>
-            <li class="active">ข่าว</li>
-        </ol>
+    <div class="breadcrumb-bar">
+        <div class="container">
+            <ol class="breadcrumb breadcrumb-bar__main">
+                <li><a href="#">หน้าแรก</a></li>
+                <li class="active">ข่าว</li>
+            </ol>
+        </div>
     </div>
-</div>
+
+    <div class="container">
+        <div class="row ad-box">ADS HERE</div>
+            <div class="row col-xs-9">
+                <div class="social-bar">
+                    <a href="" class="fa fa-facebook social-bar__button facebook"></a>
+                    <a href="" class="fa fa-twitter social-bar__button twitter"></a>
+                    <a href="" class="fa fa-google-plus social-bar__button google-plus"></a>
+                </div>
+                <div id="featured-carousel" class="carousel" data-ride="carousel" data-interval="1000">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="featured--content">
+                                <div class="featured--content__image"><img src="images\featured-1.png" alt=""></div>
+                                <div class="featured--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 13 มิ.ย. 2559 19:20</div>
+                                <div class="featured--content__headline"><a href="#">ทีเด็ด ราชบุรี มิตรผล เอฟซี ที่ทีมใหญ่มีผวา</a></div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="featured--content">
+                                <div class="featured--content__image"><img src="images\featured-2.png" alt=""></div>
+                                <div class="featured--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 13 มิ.ย. 2559 16:00</div>
+                                <div class="featured--content__headline"><a href="#">5 ประเด็นน่ารู้ ก่อนบิ๊กแมตช์ เบลเยียม - อิตาลี</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators indicators-style">
+                        <li data-target="#featured-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#featured-carousel" data-slide-to="1"></li>
+                    </ol>
+                </div>
+                <div class="row ad-box">ADS HERE</div>
+            </div>
+            <div class="col-xs-3">TTTT</div>
+    </div>
     <!--script-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/tether/dist/js/tether.min.js"></script>
