--- a/app/desktop/news.html
+++ b/app/desktop/news.html
@@ -80,6 +80,20 @@
                     </ol>
                 </div>
                 <div class="row ad-box">ADS HERE</div>
+                <div>
+                    <div class="latest__header"></div>
+                    <div class="row latest__content">
+                        <div class="col-xs-3">
+                            <div class="latest__content--image"><img src="images\latest-1.jpg" alt=""></div>
+                        </div>
+                        <div class="col-xs-9">
+                            <div class="latest__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 14 มิ.ย. 2559 14:45</div>
+                            <div class="latest__content--headline"><a href="#">เดินสาย !! บิ๊กอ๊อด เดินทางมาขอบคุณ "ช้าง" หลังซิวคิงส์คัพ</a></div>
+                            <div class="latest__content--details">นายกสมาคมกีฬาฟุตบอลแห่งประเทศไทยฯ พร้อมด้วยหัวหน้าผู้ฝึกสอนและนักกีฬาทีมชาติไทย เดินทางมาขอบคุณ บริษัท ไทยเบฟเวอเรจ จำกัด (มหาชน) ในฐานะผู้สนับสนุนทีม</div>
+                        </div>
+                    </div>
+                    <div class="latest__bottom"></div>
+                </div>
             </div>
             <div class="col-xs-3">TTTT</div>
     </div>
