Add News Content Page
+ Fixed footer

--- a/app/mobile/news.html
+++ b/app/mobile/news.html
@@ -71,8 +71,8 @@
             <a href="#" class="footer-social--icon footer-social--icon__twitter"><i class="fa fa-twitter"></i></a>
             <a href="#" class="footer-social--icon footer-social--icon__pinterest"><i class="fa fa-pinterest-p"></i></a>
             <a href="#" class="footer-social--icon footer-social--icon__google-plus"><i class="fa fa-google-plus"></i></a>
+            <p>Copyright © 2015</p>
         </div>
-        <p class="text-xs-center">Copyright © 2015</p>
     </footer>
     <!--script-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
