--- a/app/mobile/news-content.html
+++ b/app/mobile/news-content.html
@@ -12,17 +12,17 @@
         <div class="col-xs-12">
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row news-details">
-                <div class="news-details--image"><img src="images\featured-demo-img.png" alt=""></div>
-                <div class="news-details--meta">
-                    <p class="news-details--meta__author">Admin</p>
-                    <p class="news-details--meta__date">14 มิ.ย. 2559 20:00</p>
-                    <p class="news-details--meta__update">20 hours ago</p>
-                    <p class="news-details--meta__tags">TAG, TAG, TAG,</p>
+                <div class="news-details__image"><img src="images\featured-demo-img.png" alt=""></div>
+                <div class="news-details__meta">
+                    <p class="news-details__meta--author">Admin</p>
+                    <p class="news-details__meta--date">14 มิ.ย. 2559 20:00</p>
+                    <p class="news-details__meta--update">20 hours ago</p>
+                    <p class="news-details__meta--tags">TAG, TAG, TAG,</p>
                 </div>
-                <div class="news-details--header">
+                <div class="news-details__headline">
                     <p>ครั้งสุดท้าย! 9 นักเตะ เตรียมอำลาทีมชาติหลังจบ ยูโร</p>
                 </div>
-                <div class="news-details--content">
+                <div class="news-details__content">
                     <p>Content Here</p>
                 </div>
             </div>
@@ -46,30 +46,30 @@
         <div class="col-xs-12">
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row latest-news">
-                <div class="latest-news--header"><p>สกู๊ปแนะนำ</p></div>
-                <div class="latest-news--content">
+                <div class="latest-news__header"><p>สกู๊ปแนะนำ</p></div>
+                <div class="latest-news__content">
                     <div class="row bottom-space">
                         <div class="col-xs-6">
-                            <div class="latest-news--content__image"><img src="images\latest-demo-img.jpg" alt=""></div>
-                            <div class="latest-news--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
-                            <div class="latest-news--content__headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
+                            <div class="latest-news__content--image"><img src="images\latest-demo-img.jpg" alt=""></div>
+                            <div class="latest-news__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
+                            <div class="latest-news__content--headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="latest-news--content__image"><img src="images\latest-demo-img.jpg" alt=""></div>
-                            <div class="latest-news--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
-                            <div class="latest-news--content__headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
+                            <div class="latest-news__content--image"><img src="images\latest-demo-img.jpg" alt=""></div>
+                            <div class="latest-news__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
+                            <div class="latest-news__content--headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
                         </div>
                     </div>
                     <div class="row bottom-space">
                         <div class="col-xs-6">
-                            <div class="latest-news--content__image"><img src="images\latest-demo-img.jpg" alt=""></div>
-                            <div class="latest-news--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
-                            <div class="latest-news--content__headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
+                            <div class="latest-news__content--image"><img src="images\latest-demo-img.jpg" alt=""></div>
+                            <div class="latest-news__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
+                            <div class="latest-news__content--headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="latest-news--content__image"><img src="images\latest-demo-img.jpg" alt=""></div>
-                            <div class="latest-news--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
-                            <div class="latest-news--content__headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
+                            <div class="latest-news__content--image"><img src="images\latest-demo-img.jpg" alt=""></div>
+                            <div class="latest-news__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
+                            <div class="latest-news__content--headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
                         </div>
                     </div>
                 </div>
@@ -88,18 +88,18 @@
             <li><a href="#" class="footer__link">เกี่ยวกับเรา</a></li>
         </ul>
         <div class="footer-social text-xs-center">
-            <a href="#" class="footer-social--icon footer-social--icon__facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="footer-social--icon footer-social--icon__twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="footer-social--icon footer-social--icon__pinterest"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#" class="footer-social--icon footer-social--icon__google-plus"><i class="fa fa-google-plus"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--facebook"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--twitter"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--pinterest"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--google-plus"><i class="fa fa-google-plus"></i></a>
             <p>Copyright © 2015</p>
         </div>
     </footer>
     <div class="social-stay-bottom">
-        <a href="#" class="col-xs-3 fa fa-facebook social--button social--button__facebook"></a>
-        <a href="#" class="col-xs-3 fa fa-twitter social--button social--button__twitter"></a>
-        <a href="#" class="col-xs-3 fa fa-google-plus social--button social--button__google-plus"></a>
-        <a href="#" class="col-xs-3 icon-line social--button social--button__line"></a>
+        <a href="#" class="col-xs-3 fa fa-facebook social-bar__button social-bar__button--facebook"></a>
+        <a href="#" class="col-xs-3 fa fa-twitter social-bar__button social-bar__button--twitter"></a>
+        <a href="#" class="col-xs-3 fa fa-google-plus social-bar__button social-bar__button--google-plus"></a>
+        <a href="#" class="col-xs-3 icon-line social-bar__button social-bar__button--line"></a>
     </div>
     <!--script-->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
