--- a/app/mobile/news.html
+++ b/app/mobile/news.html
@@ -12,25 +12,25 @@
         <div class="col-xs-12">
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row social-bar">
-                <a href="#" class="col-xs-3 fa fa-facebook social--button social--button__facebook"></a>
-                <a href="#" class="col-xs-3 fa fa-twitter social--button social--button__twitter"></a>
-                <a href="#" class="col-xs-3 fa fa-google-plus social--button social--button__google-plus"></a>
-                <a href="#" class="col-xs-3 icon-line social--button social--button__line"></a>
+                <a href="#" class="col-xs-3 fa fa-facebook social-bar__button social-bar__button--facebook"></a>
+                <a href="#" class="col-xs-3 fa fa-twitter social-bar__button social-bar__button--twitter"></a>
+                <a href="#" class="col-xs-3 fa fa-google-plus social-bar__button social-bar__button--google-plus"></a>
+                <a href="#" class="col-xs-3 icon-line social-bar__button social-bar__button--line"></a>
             </div>
             <div id="featured-carousel" class="row carousel slide" data-ride="carousel" data-interval="2000">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="featured--content">
-                            <div class="featured--content__image"><img src="images\featured-demo-img.png" alt=""></div>
-                            <div class="featured--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 14 มิ.ย. 2559 20:00</div>
-                            <div class="featured--content__headline"><a href="#">ครั้งสุดท้าย! 9 นักเตะ เตรียมอำลาทีมชาติหลังจบ ยูโร</a></div>
+                        <div class="featured-content">
+                            <div class="featured-content__image"><img src="images\featured-demo-img.png" alt=""></div>
+                            <div class="featured-content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 14 มิ.ย. 2559 20:00</div>
+                            <div class="featured-content__headline"><a href="#">ครั้งสุดท้าย! 9 นักเตะ เตรียมอำลาทีมชาติหลังจบ ยูโร</a></div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="featured--content">
-                            <div class="featured--content__image"><img src="images\featured-demo-img-2.png" alt=""></div>
-                            <div class="featured--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:20</div>
-                            <div class="featured--content__headline"><a href="#">สะสาง-ซ้ำรอย !! 3 ปีที่ ราชบุรี ไร้ชัยเหนือ ชัยนาท</a></div>
+                        <div class="featured-content">
+                            <div class="featured-content__image"><img src="images\featured-demo-img-2.png" alt=""></div>
+                            <div class="featured-content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:20</div>
+                            <div class="featured-content__headline"><a href="#">สะสาง-ซ้ำรอย !! 3 ปีที่ ราชบุรี ไร้ชัยเหนือ ชัยนาท</a></div>
                         </div>
                     </div>
                 </div>
@@ -38,15 +38,15 @@
             <div class="row bottom-separator"></div>
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row latest-news">
-                <div class="latest-news--header"></div>
-                <div class="latest-news--content">
+                <div class="latest-news__header"></div>
+                <div class="latest-news__content">
                     <div class="row col-xs-3">
-                        <div class="latest-news--content__image"><img src="images\latest-demo-img.jpg" alt=""></div>
+                        <div class="latest-news__content--image"><img src="images\latest-demo-img.jpg" alt=""></div>
                     </div>
                     <div class="col-xs-9">
-                        <div class="latest-news--content__date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
-                        <div class="latest-news--content__headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
-                        <div class="latest-news--content__details">หลังห่างหายจากทัวร์นาเมนต์ใหญ่ไปนานกว่า 30 ปี ขุนพล “แม็กยาร์” กลับมาในฐานะม้านอกสายตา และประเดิมสนามอย่างสวยหรู</div>
+                        <div class="latest-news__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
+                        <div class="latest-news__content--headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
+                        <div class="latest-news__content--details">หลังห่างหายจากทัวร์นาเมนต์ใหญ่ไปนานกว่า 30 ปี ขุนพล “แม็กยาร์” กลับมาในฐานะม้านอกสายตา และประเดิมสนามอย่างสวยหรู</div>
                     </div>
                 </div>
                 <div class="latest-news__separator"></div>
@@ -67,10 +67,10 @@
             <li><a href="#" class="footer__link">เกี่ยวกับเรา</a></li>
         </ul>
         <div class="footer-social text-xs-center">
-            <a href="#" class="footer-social--icon footer-social--icon__facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="footer-social--icon footer-social--icon__twitter"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="footer-social--icon footer-social--icon__pinterest"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#" class="footer-social--icon footer-social--icon__google-plus"><i class="fa fa-google-plus"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--facebook"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--twitter"><i class="fa fa-twitter"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--pinterest"><i class="fa fa-pinterest-p"></i></a>
+            <a href="#" class="footer-social__icon footer-social__icon--google-plus"><i class="fa fa-google-plus"></i></a>
             <p>Copyright © 2015</p>
         </div>
     </footer>
