--- a/app/mobile/news.html
+++ b/app/mobile/news.html
@@ -40,10 +40,10 @@
             <div class="row latest-news">
                 <div class="latest-news__header"></div>
                 <div class="latest-news__content">
-                    <div class="row col-xs-3">
+                    <div class="col-xs-4 p-x-0">
                         <div class="latest-news__content--image"><img src="images\latest-demo-img.jpg" alt=""></div>
                     </div>
-                    <div class="col-xs-9">
+                    <div class="col-xs-8">
                         <div class="latest-news__content--date"><i class="fa fa-clock-o" aria-hidden="true"></i> 15 มิ.ย. 2559 12:00</div>
                         <div class="latest-news__content--headline"><a href="#">รวมสถิติน่าสนใจเกม “ฮังการี” พลิกดับออสเตรีย</a></div>
                         <div class="latest-news__content--details">หลังห่างหายจากทัวร์นาเมนต์ใหญ่ไปนานกว่า 30 ปี ขุนพล “แม็กยาร์” กลับมาในฐานะม้านอกสายตา และประเดิมสนามอย่างสวยหรู</div>
