--- a/app/mobile/news-content.html
+++ b/app/mobile/news-content.html
@@ -23,7 +23,13 @@
                     <p>ครั้งสุดท้าย! 9 นักเตะ เตรียมอำลาทีมชาติหลังจบ ยูโร</p>
                 </div>
                 <div class="news-details__content">
-                    <p>Content Here</p>
+                    <div>
+                        <div class="col-xs-2 news-details__content--quote"></div>
+                        <div class="col-xs-10 news-details__content--sub-headline text-xs-center">
+                            <p>SUBHEADLINE HERE</p>
+                        </div>
+                    </div>
+                    <p>CONTENT HERE</p>
                 </div>
             </div>
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
