--- a/app/mobile/news-content.html
+++ b/app/mobile/news-content.html
@@ -8,6 +8,14 @@
     </head>
 
     <body>
+    <div class="breadcrumb-bar">
+        <div class="container">
+            <ol class="breadcrumb breadcrumb-bar--balltoro">
+                <li><a href="#">Home</a></li>
+                <li class="active">Library</li>
+            </ol>
+        </div>
+    </div>
     <div class="container">
         <div class="col-xs-12">
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
