Add Share function to Social Button

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -11,10 +11,12 @@
         <div class="col-xs-12">
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row social-bar">
-                <a href="#" class="col-xs-3 fa fa-facebook social-bar__button social-bar__button--facebook"></a>
-                <a href="#" class="col-xs-3 fa fa-twitter social-bar__button social-bar__button--twitter"></a>
-                <a href="#" class="col-xs-3 fa fa-google-plus social-bar__button social-bar__button--google-plus"></a>
-                <a href="#" class="col-xs-3 icon-line social-bar__button social-bar__button--line"></a>
+                <div class="fb-share-button" data-href="https://balltoro.com/" data-layout="button_count" data-mobile-iframe="true">
+                    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://balltoro.com/" class="col-xs-3 fa fa-facebook social-bar__button social-bar__button--facebook fb-xfbml-parse-ignore"></a>
+                </div>
+                <a href="https://twitter.com/intent/tweet?via=BalltoroNews" class="col-xs-3 fa fa-twitter social-bar__button social-bar__button--twitter"></a>
+                <a href="https://plus.google.com/share?url=https://balltoro.com" target="_blank" class="col-xs-3 fa fa-google-plus social-bar__button social-bar__button--google-plus g-plus"></a>
+                <a href="http://line.me/R/msg/text/https://balltoro.com" class="col-xs-3 icon-line social-bar__button social-bar__button--line"></a>
             </div>
             <div id="featured-carousel" class="row carousel slide" data-ride="carousel" data-interval="2000">
                 <div class="carousel-inner" role="listbox">
