created score board

--- a/app/mobile/index.html
+++ b/app/mobile/index.html
@@ -151,6 +151,28 @@
                 </div>
                 <div class="latest-news__separator"></div>
             </div>
+            <div class="row result-board">
+
+                <div class="row btn result-board__button"  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <p>ผลบอล</p>
+                </div>
+                <div class="collapse" id="collapseExample">
+                    <p>English Premier League</p>
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
             <div class="row ad-box text-xs-center">ADVERTISE HERE</div>
